<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_margin="10dp">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/ivAboutPhoto"
            android:src="@drawable/person_24"
            android:scaleType="centerCrop"
            android:layout_margin="6dp"
            android:contentDescription="@string/logo_image_about"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_tv"
                android:textSize="24sp"
                android:textStyle="bold"
                android:padding="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvNameAbout"
                android:text="@string/your_name"
                android:textSize="18sp"
                android:padding="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_tv"
                android:textSize="24sp"
                android:textStyle="bold"
                android:padding="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvEmailAbout"
                android:text="@string/email_example_com"
                android:textSize="18sp"
                android:padding="5dp"/>
        </LinearLayout>


    </LinearLayout>

</ScrollView>